--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^10.18.0",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.475.0",
     "postprocessing": "^6.36.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
